<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                style="@style/invoiceTextView"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="6.5sp"
                android:text="@string/invoice_title_water" />

            <TextView
                android:id="@+id/tvCompanyName"
                style="@style/invoiceTextView2"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="شركة مياه الشرب و الصرف الصحي بدمياط" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    style="@style/invoiceTextView2"
                    android:text="@string/invoice_Commercial"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/ivCompanyLogo"
                    android:layout_width="40dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:src="@drawable/test_logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <TextView
                style="@style/invoiceTextView"
                android:text="@string/request_payment"
                android:textSize="6.5sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInvoiceDate"
                style="@style/invoiceTextView2"
                android:text="@string/s_invoce_date" />

            <TextView
                android:id="@+id/tvCustomerServiceCode"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_code"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerServiceName"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_name"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerServiceCount"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_count"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerCountBill"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_bill_count"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerTotalBill"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_total_acult"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerDate"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_from_to_date"
                android:textSize="6.5sp" />

            <TextView
                android:id="@+id/tvCustomerServiceAddress"
                style="@style/invoiceTextView2"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:text="@string/s_short_invoice_address"
                android:textSize="6.5sp" />

            <TextView
                style="@style/invoiceTextView"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/_24ssp"
                android:text="يرجى التكرم بسرعة سداد المديونية خلال سبعة أيام من تاريخه منعا لإتخاذ الإجراءات القانونية"
                android:textSize="6.5sp" />

            <TextView
                style="@style/invoiceTextView"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/receipt_line_separator"
                android:textSize="6.5sp" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>